--- a/SchoolDiarySystem/Views/Absence/Create.cshtml
+++ b/SchoolDiarySystem/Views/Absence/Create.cshtml
@@ -26,11 +26,11 @@
             @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
             <form class="new-added-form">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                    @*<div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>Select Class *</label>
                         @Html.DropDownListFor(m => m.ClassID, new SelectList(ViewBag.Class, "ClassID", "ClassNo"), new { @class = "select2" })
                         @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
-                    </div>
+                    </div>*@
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>Select Subject *</label>
                         @Html.DropDownListFor(m => m.SubjectID, new SelectList(ViewBag.Subject, "SubjectID", "SubjectTitle"), new { @class = "select2" })
