--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -97,7 +97,7 @@
                             </div>
                             <div class="item-content">
                                 <ul class="settings-list">
-                                    <li><a href="#"><i class="flaticon-user"></i>My Profile</a></li>
+                                    @*<li><a href="#"><i class="flaticon-user"></i>My Profile</a></li>*@
                                     <li><a href="@Url.Action("Logout", "Account")"><i class="flaticon-turn-off"></i>Log Out</a></li>
                                 </ul>
                             </div>
