--- a/SchoolDiarySystem/Views/Student/Index.cshtml
+++ b/SchoolDiarySystem/Views/Student/Index.cshtml
@@ -99,50 +99,97 @@
                                             <span class="flaticon-more-button-of-three-dots"></span>
                                         </a>
                                         @*<script>
-                                            var studid = 0;
-                                            function setid(id) {
-                                                studid = id;
-                                                console.log(id);
-                                            }
-                                            function getid() {
-                                                return studid;
-                                            }
-                                        </script>*@
+                                var studid = 0;
+                                function setid(id) {
+                                    studid = id;
+                                    console.log(id);
+                                }
+                                function getid() {
+                                    return studid;
+                                }
+                            </script>*@
                                         <div class="dropdown-menu dropdown-menu-right">
                                             @*<a class="dropdown-item" onclick="setid(@item.StudentID)" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>*@
                                             <a class="dropdown-item" href="@Url.Action("Delete", "Student", new { id = item.StudentID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                             <a class="dropdown-item" href="@Url.Action("Update", "Student", new { id = item.StudentID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                         </div>
                                         <!--<div class="modal-box">
-                                            <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-                                                <div class="modal-dialog" role="document">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title">Sure?</h5>
-                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                                <span aria-hidden="true">×</span>
-                                                            </button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            Are you sure you want to delete?
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
-                                                            <a class="dropdown-item" href="@Html.BeginForm("Delete", "Student", new { id = item.StudentID }, FormMethod.Post)"><i class="fas fa-times text-orange-red"></i>Delete</a>-->
-                                                            @*@using (Html.BeginForm("Delete", "Student", new { id = item.StudentID }, FormMethod.Post))
-        {*@
-                                                            @*<input type="submit" onclick="location.href='<%: Url.Action("Delete", "Student") %>'"  value="Yes" class="footer-btn bg-linkedin" />*@
-                                                            @*}*@
-                                                        <!--</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>-->
+                            <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Sure?</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">×</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to delete?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
+                                            <a class="dropdown-item" href="@Html.BeginForm("Delete", "Student", new { id = item.StudentID }, FormMethod.Post)"><i class="fas fa-times text-orange-red"></i>Delete</a>-->
+                                        @*@using (Html.BeginForm("Delete", "Student", new { id = item.StudentID }, FormMethod.Post))
+                            {*@
+                                        @*<input type="submit" onclick="location.href='<%: Url.Action("Delete", "Student") %>'"  value="Yes" class="footer-btn bg-linkedin" />*@
+                                        @*}*@
+                                        <!--</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>-->
                                     </div>
                                 </td>
                             </tr>
                         }
                     </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <div class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                        <span class="flaticon-more-button-of-three-dots"></span>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right">
+                                        <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-download"></i>Download Excel</a>
+                                        @*<a class="dropdown-item" onclick="PrintTable();"><i class="fas fa-print"></i>Print</a>*@
+                                    </div>
+                                    <div class="modal-box">
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title">Download Excel</h5>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                            <span aria-hidden="true">×</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure you want to download?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
+                                                        @using (Html.BeginForm("Export", "Student", FormMethod.Post))
+                                                        {
+                                                            <input type="submit" value="Download Excel" class="footer-btn bg-linkedin" aria-label="Close" />
+                                                        }
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
         </div>
