--- a/SchoolDiarySystem/Views/Schedule/Update.cshtml
+++ b/SchoolDiarySystem/Views/Schedule/Update.cshtml
@@ -50,7 +50,7 @@
                         @Html.ValidationMessageFor(m => m.Day, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-12 form-group mg-t-8">
-                        <input type="submit" value="@SchoolDiarySystem.Resources.Schedule.Update.UpdateTexts.Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                        <input type="submit" value="@SchoolDiarySystem.Resources.Universal.UniversalTexts.UpdateUpper" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
                     </div>
                 </div>
             </form>
