--- a/SchoolDiarySystem/Views/Professor/Index.cshtml
+++ b/SchoolDiarySystem/Views/Professor/Index.cshtml
@@ -67,44 +67,56 @@
                                             <th>@SchoolDiarySystem.Resources.Professor.IndexTexts.Class</th>
                                             <th>@SchoolDiarySystem.Resources.Professor.IndexTexts.Parent</th>
                                             <th>@SchoolDiarySystem.Resources.Professor.IndexTexts.DoB</th>
+                                            <th></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         @foreach (var item in Model)
                                         {
-                                            <tr>
-                                                <td class="text-center">
-                                                    <div class="form-check">
-                                                        <input type="checkbox" class="form-check-input">
-                                                        @if (item.Gender == "Male")
-                                                        {
-                                                            <img src="~/Content/img/figure/student2.png" alt="student">
-                                                        }
-                                                        else
-                                                        {
-                                                            <img src="~/Content/img/figure/student3.png" alt="student">
-                                                        }
+                                        <tr>
+                                            <td class="text-center">
+                                                <div class="form-check">
+                                                    <input type="checkbox" class="form-check-input">
+                                                    @if (item.Gender == "Male")
+                                                    {
+                                                        <img src="~/Content/img/figure/student2.png" alt="student">
+                                                    }
+                                                    else
+                                                    {
+                                                        <img src="~/Content/img/figure/student3.png" alt="student">
+                                                    }
+                                                </div>
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.FirstName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.LastName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Gender)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Class.ClassNo)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Parent.FullName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.DayofBirth)
+                                            </td>
+                                            <td>
+                                                @*<div class="dropdown">
+                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                                        <span class="flaticon-more-button-of-three-dots"></span>
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right">
+                                                        <a class="dropdown-item" href="@Url.Action("Create", "Absence", new { id = item.StudentID })">@SchoolDiarySystem.Resources.Universal.UniversalTexts.Absence</a>
+                                                        <a class="dropdown-item" href="@Url.Action("Create", "Comment", new { id = item.StudentID })">@SchoolDiarySystem.Resources.Universal.UniversalTexts.Comment</a>
                                                     </div>
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.FirstName)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.LastName)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.Gender)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.Class.ClassNo)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.Parent.FullName)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(m => item.DayofBirth)
-                                                </td>
-                                            </tr>
+                                                </div>*@
+                                            </td>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
